# Verbum

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  addword.1  addword.c  config.h.in  configure  configure.ac  fileops.h  jumble.1  jumble.c  wordlist  xword.1  xword.c
